Tried to add the averaging update ability like we added gor the volume selector and for some reason it seems that it is not firing when I think it should. I think maybe the map[] in SpeakerPutHandler is not finding it somehow, which would be weird since it parses UpdatesAttributes and that has an averaging member in it. Also, I changed the Jsoon variable from FilterType to averaging. Also, averaging mode does not even work anymore since I changed the handler in main.go and it is not connected somehow. If you could tell me what I didn't do or did wrong, that would be awesome.

--- a/software/src/omaha/templates/components/averaging-controller.html
+++ b/software/src/omaha/templates/components/averaging-controller.html
@@ -74,13 +74,22 @@
     Polymer({
       is: 'averaging-controller',
 
+      properties: {
+        speakerId: {
+            type: Number
+          }
+      },
       listeners: {
         'menu.iron-select': '_selectionChanged'
       },
       
       _selectionChanged: function(event) {
-          var data = {"filterType": this.$.menu.selected + 1};
-          this.$.selectModeAjax.body = data;
+          //var data = {"filterType": this.$.menu.selected + 1};
+          // this.$.selectModeAjax.body = data;
+          this.$.selectModeAjax.body = {
+            "averaging": this.$.menu.selected + 1,                       // Not sure if this is how its supposed to be
+            "speaker": this.speakerId
+          };
           this.$.selectModeAjax.generateRequest();
       },
 
