--- a/software/src/omaha/templates/components/omaha-app.html
+++ b/software/src/omaha/templates/components/omaha-app.html
@@ -33,7 +33,7 @@
           <iron-pages id="app-pages" selected="{{selected}}">
             <map-controller class="fit"></map-controller>
             <audio-controller id="s1" volume="50" class="fit" speaker-id="107"></audio-controller>
-            <audio-controller id="s2" volume="10" class="fit" speaker-id="200"></audio-controller>
+            <audio-controller id="s2" volume="50" class="fit" speaker-id="200"></audio-controller>
           </iron-pages>
           <!-- <audio-controller id="test" volume="21" class="fit"></audio-controller> -->
         </paper-header-panel>
@@ -44,6 +44,7 @@
 
       properties: {
         volume: Number,
+        averaging: Number,      // Not sure if this needs to be there
         
         selected: {
           type: Number,
