--- a/software/src/omaha/templates/components/volume-selector.html
+++ b/software/src/omaha/templates/components/volume-selector.html
@@ -63,6 +63,7 @@
       },
       
       _setVolumeClicked: function() {
+        console.log(this.speakerId);
         this.$.toast.show();
         var updatedAttributes = ["volume"];
         var attributeValues = {
