OMG OMG OMG OMG I did it. I got it. LIKE A BOSS. I did the volume thing. It was literally one line that I was forgetting about in audio-controller.html. <averaging-controller id=averaging speaker-id=[[speakerId]] averaging=[[averaging]]></averaging-controller> I didn't realise that you needed to add that and tell it there was a speakerId there. I'm a derp. Anyways, averaging is done, light is like half done but it complains about an EOF error or something in the console but I feel accomplished for now so I'll fix it later. I think I'm getting the hang of web programming, or atleast our web server.

--- a/software/src/omaha/templates/components/audio-controller.html
+++ b/software/src/omaha/templates/components/audio-controller.html
@@ -76,7 +76,7 @@
       <div class="container layout horizontal center">
         <div class="container layout vertical center">
 
-          <light-controller id="light"></light-controller>
+          <light-controller id="light" speaker-id="[[speakerId]]"></light-controller>
         </div>
       </div>
       </neon-animatable>
@@ -85,7 +85,7 @@
       <neon-animatable class="horizontal layout" entry-animation="slide-from-right-animation" exit-animation="slide-right-animation">
       <div class="container layout horizontal center">
         <div class="container layout vertical center">
-          <averaging-controller id="averaging"></averaging-controller>
+          <averaging-controller id="averaging" speaker-id="[[speakerId]]" averaging="[[averaging]]"></averaging-controller>
         </div>
       </div>
       </neon-animatable>
