--- a/software/src/omaha/templates/components/light-controller.html
+++ b/software/src/omaha/templates/components/light-controller.html
@@ -90,14 +90,20 @@
 
       properties: {
         speakerId: {
-            type: Number
+            type: Number,
           }
       },
 
       _onPressed: function(){
         this._showDay();
 
-        this.$.selectModeAjax.body = {
+        var updatedAttributes = ["led"];
+        var attributeValues = {
+          "led": 1
+        };
+        this.$.ledOnAjax.body = {
+          "updatedAttributes": updatedAttributes, 
+          "attributeValues": attributeValues,
           "speaker": this.speakerId
         };
         this.$.ledOnAjax.generateRequest();
@@ -105,7 +111,14 @@
 
       _offPressed: function() {
         this._showNight();
-        this.$.selectModeAjax.body = {
+
+        var updatedAttributes = ["led"];
+        var attributeValues = {
+          "led": 0
+        };
+        this.$.ledOffAjax.body = {
+          "updatedAttributes": updatedAttributes, 
+          "attributeValues": attributeValues,
           "speaker": this.speakerId
         };
         this.$.ledOffAjax.generateRequest();
