updated sql and fixed led issues

--- a/software/src/omaha/templates/components/light-controller.html
+++ b/software/src/omaha/templates/components/light-controller.html
@@ -68,18 +68,23 @@
     <iron-ajax
       id="ledOnAjax"
       url="/demo/start"
+      method="PUT"
+      content-type="application/json"
       handle-as="json"
       on-response="_logResponse"
       debounce-duration="300"></iron-ajax>
     <iron-ajax
       id="ledOffAjax"
       url="/demo/stop"
+      method="PUT"
+      content-type="application/json"
       handle-as="json"
       on-response="_logResponse"
       debounce-duration="300"></iron-ajax>
     <iron-ajax
       id="ledStatusAjax"
       url="/system/"
+      content-type="application/json"
       handle-as="json"
       on-response="_initializeStatus"
       debounce-duration="300"></iron-ajax>
@@ -99,7 +104,7 @@
 
         var updatedAttributes = ["led"];
         var attributeValues = {
-          "led": 1
+          "led": true
         };
         this.$.ledOnAjax.body = {
           "updatedAttributes": updatedAttributes, 
