--- a/software/src/omaha/templates/components/audio-controller.html
+++ b/software/src/omaha/templates/components/audio-controller.html
@@ -73,38 +73,57 @@
     </div>
     <neon-animated-pages selected="[[page]]" id="pages" class="flex">
       <neon-animatable class="horizontal layout" entry-animation="slide-from-right-animation" exit-animation="slide-right-animation">
-      <div class="container layout horizontal center">
-        <div class="container layout vertical center">
-
-          <light-controller id="light" speaker-id="[[speakerId]]"></light-controller>
+        <div class="container layout horizontal center">
+          <div class="container layout vertical center">
+            <light-controller id="light" led-on="{{ledOn}}"></light-controller>
+          </div>
         </div>
-      </div>
       </neon-animatable>
 
 
       <neon-animatable class="horizontal layout" entry-animation="slide-from-right-animation" exit-animation="slide-right-animation">
-      <div class="container layout horizontal center">
-        <div class="container layout vertical center">
-          <averaging-controller id="averaging" speaker-id="[[speakerId]]" averaging="[[averaging]]"></averaging-controller>
+        <div class="container layout horizontal center">
+          <div class="container layout vertical center">
+            <averaging-controller id="averaging" speaker-id="[[speakerId]]" averaging="[[averaging]]"></averaging-controller>
+          </div>
         </div>
-      </div>
       </neon-animatable>
 
 
       <neon-animatable class="horizontal layout" entry-animation="slide-from-left-animation" exit-animation="slide-left-animation">
-      <div class="container layout horizontal center">
-        <div class="container layout vertical center">
-          <volume-selector id="volume" speaker-id="[[speakerId]]" volume="[[volume]]"></volume-selector>
+        <div class="container layout horizontal center">
+          <div class="container layout vertical center">
+            <volume-selector id="volume" speaker-id="[[speakerId]]" volume="[[volume]]"></volume-selector>
+          </div>
         </div>
-      </div>
       </neon-animatable>
     </neon-animated-pages>
+    <iron-ajax
+          id="speakerUpdateAjax"
+          url="/system/speaker/"
+          method="PUT"
+          content-type="application/json"
+          handle-as="json"
+          on-response="_logResponse"
+          debounce-duration="300"></iron-ajax>
+    <iron-ajax
+      id="systemStatusAjax"
+      url="/system/"
+      content-type="application/json"
+      handle-as="json"
+      on-response="_initializeStatus"
+      debounce-duration="300"></iron-ajax>
   </template>
   <script>
     Polymer({
       is: 'audio-controller',
 
       properties: {
+        isReady: {
+          type: Boolean,
+          value: false
+        },
+
         mode: {
           type: String,
           value: "light",
@@ -115,7 +134,13 @@
           value: 0
         },
         speakerId: {
-          type: Number
+          type: Number,
+          value: 0
+        },
+        ledOn: {
+          type: Boolean,
+          value: true,
+          observer: '_ledUpdate'
         }
       },
 
@@ -140,6 +165,37 @@
           default:
             break;
         }
+      },
+
+      _ledUpdate: function() {
+        if(this.isReady) {
+          var updatedAttributes = ["led"];
+          var attributeValues = {
+            "led": this.ledOn,
+          };
+          this.$.speakerUpdateAjax.body = {
+            "updatedAttributes": updatedAttributes, 
+            "attributeValues": attributeValues,
+            "speaker": this.speakerId
+          };
+          this.$.speakerUpdateAjax.generateRequest();
+        }
+      },
+
+      _logResponse: function(event, data) {
+        console.log(data.response);
+      },
+
+      _initializeStatus: function(event, data) {
+        var controller = data.response.status.controllers[this.speakerId.toString()];
+        // if a speaker with this ID doesn't exist on the server, default to false
+        var ledOn = controller !== undefined ? controller.ledOn : false;
+        this.ledOn = ledOn;
+        this.isReady = true;
+      },
+
+      ready: function() {
+        this.$.systemStatusAjax.generateRequest();
       }
     });
   </script>
