--- a/software/src/omaha/templates/components/omaha-app.html
+++ b/software/src/omaha/templates/components/omaha-app.html
@@ -32,8 +32,8 @@
           <omaha-navbar id="nav" selected="{{selected}}" class="paper-header"></omaha-navbar>
           <iron-pages id="app-pages" selected="{{selected}}">
             <map-controller class="fit"></map-controller>
-            <audio-controller id="s1" volume="50" class="fit" speaker-id="107"></audio-controller>
-            <audio-controller id="s2" volume="50" class="fit" speaker-id="108"></audio-controller>
+            <audio-controller id="s1" class="fit" speaker-id="107"></audio-controller>
+            <audio-controller id="s2" class="fit" speaker-id="108"></audio-controller>
           </iron-pages>
           <!-- <audio-controller id="test" volume="21" class="fit"></audio-controller> -->
         </paper-header-panel>
