--- a/software/src/omaha/templates/components/omaha-navbar.html
+++ b/software/src/omaha/templates/components/omaha-navbar.html
@@ -28,17 +28,17 @@
           <paper-icon-button class="dropdown-trigger" icon="menu"></paper-icon-button>
           <paper-menu class="dropdown-content" selected="{{selected}}">
             <paper-item>Map</paper-item>
-            <paper-item>Speaker 1</paper-item>
-            <paper-item>Speaker 2</paper-item>
+<!--             <paper-item>Speaker 1</paper-item>
+            <paper-item>Speaker 2</paper-item> -->
           </paper-menu>
         </paper-menu-button>
         <div class="title">Project Omaha</div>
-        <paper-dropdown-menu no-label-float label="Speaker">
+<!--         <paper-dropdown-menu no-label-float label="Speaker">
           <paper-menu class="dropdown-content" selected="0">
             <paper-item>Speaker 1</paper-item>
             <paper-item>Speaker 2</paper-item>
           </paper-menu>
-        </paper-dropdown-menu>
+        </paper-dropdown-menu> -->
       </paper-toolbar>
   </template>
   <script>
