--- a/software/src/omaha/templates/components/speaker-icon.html
+++ b/software/src/omaha/templates/components/speaker-icon.html
@@ -29,7 +29,7 @@
       }
 
     </style>
-    <iron-icon id="icon" class="block" icon="av:surround-sound"></iron-icon>
+    <iron-icon id="icon" class="block" icon="av:volume-up"></iron-icon>
     <paper-tooltip for="icon">Speaker <span>{{speakerId}}</span></paper-tooltip>
   </template>
   <script>
