--- a/software/src/omaha/templates/components/omaha-navbar.html
+++ b/software/src/omaha/templates/components/omaha-navbar.html
@@ -17,21 +17,14 @@
         --paper-input-container-underline: {
           background-color: white;
         }
-        --paper-dropdown-menu-icon: {
-          color: white;
+        --paper-icon-button: {
+          margin-right: 20px;
         }
       }
 
     </style>
       <paper-toolbar>
-        <paper-menu-button>
-          <paper-icon-button class="dropdown-trigger" icon="menu"></paper-icon-button>
-          <paper-menu class="dropdown-content" selected="{{selected}}">
-            <paper-item>Map</paper-item>
-<!--             <paper-item>Speaker 1</paper-item>
-            <paper-item>Speaker 2</paper-item> -->
-          </paper-menu>
-        </paper-menu-button>
+        <paper-icon-button on-click="_backPressed" id="back" icon="arrow-back"></paper-icon-button>
         <div class="title">Project Omaha</div>
 <!--         <paper-dropdown-menu no-label-float label="Speaker">
           <paper-menu class="dropdown-content" selected="0">
@@ -50,8 +43,21 @@
           type: Number,
           notify: true
         }
+      },
 
-        //console.log(selected);
+      _backPressed: function() {
+        this.fire('backpressed', {});
+        this.hideBackArrow();
+      },
+
+      showBackArrow: function() {
+        this.$.back.icon = "arrow-back";
+        this.$.back.disabled = false;
+      },
+
+      hideBackArrow: function() {
+        this.$.back.icon = "none";
+        this.$.back.disabled = true;
       }
 
       //console.log(selected);
