--- a/software/src/omaha/templates/components/speaker-icon.html
+++ b/software/src/omaha/templates/components/speaker-icon.html
@@ -23,7 +23,6 @@
         width: 30px;
         height: 30px;
         position: absolute;
-        --iron-icon-fill-color: var(--google-grey-700);
         cursor: pointer;
 
       }
@@ -33,6 +32,26 @@
     <paper-tooltip for="icon">Speaker <span>{{speakerId}}</span></paper-tooltip>
   </template>
   <script>
+    var colors = [
+      '--paper-brown-500',
+      '--paper-deep-orange-500',
+      '--paper-orange-500',
+      '--paper-amber-500',
+      '--paper-yellow-500',
+      '--paper-lime-500',
+      '--paper-light-green-500',
+      '--paper-green-500',
+      '--paper-teal-500',
+      '--paper-cyan-500',
+      '--paper-light-blue-500',
+      '--paper-blue-500',
+      '--paper-indigo-500',
+      '--paper-deep-purple-500',
+      '--paper-purple-500',
+      '--paper-pink-500',
+      '--paper-red-500'
+    ];
+
     Polymer({
       is: 'speaker-icon',
 
@@ -46,6 +65,9 @@
           console.log
           this.$.icon.style.left = this.x.toString() + "px";
           this.$.icon.style.top = this.y.toString() + "px";
+          var color = colors[Math.floor(Math.random()*colors.length)];
+          this.$.icon.customStyle['--iron-icon-fill-color'] = 'var(' + color + ')';
+          this.$.icon.updateStyles();
       }
     });
   </script>
