--- a/software/src/omaha/templates/components/map-controller.html
+++ b/software/src/omaha/templates/components/map-controller.html
@@ -8,6 +8,7 @@
 <link rel="import" href="/bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="/bower_components/paper-button/paper-button.html">
 <link rel="import" href="/bower_components/paper-styles/paper-styles.html">
+<link rel="import" href="/bower_components/neon-animation/neon-animation.html">
 
 <link rel="import" href="/components/speaker-icon.html">
 
@@ -49,6 +50,32 @@
     Polymer({
       is: 'map-controller',
 
+      behaviors: [
+        Polymer.NeonSharedElementAnimatableBehavior
+      ],
+
+      properties: {
+        animationConfig: {
+          value: function() {
+            return {
+              'entry': {
+                // provided by neon-animation/animations/scale-up-animation.html
+                name: 'slide-from-right-animation',
+                node: this
+              },
+              'exit': [{
+                name: 'hero-animation',
+                id: 'hero',
+                fromPage: this
+              },{
+                name: 'fade-out-animation',
+                node: this
+              }]
+            }
+          }
+        }
+      },
+
       test: function(event) {
         var rect = this.$.map.getBoundingClientRect();
         var parentX = rect.left;
@@ -67,6 +94,9 @@
 
       _iconClicked: function(event) {
         var evnt = Polymer.dom(event);
+        this.sharedElements = {
+          'hero': event.target
+        };
         /*
           event names must be lowercase
         */
