--- a/software/src/omaha/templates/components/omaha-app.html
+++ b/software/src/omaha/templates/components/omaha-app.html
@@ -3,6 +3,7 @@
 <link rel="import" href="/bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="/bower_components/paper-header-panel/paper-header-panel.html">
 <link rel="import" href="/bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="/bower_components/neon-animation/neon-animation.html">
 
 <link rel="import" href="/components/omaha-navbar.html">
 <link rel="import" href="/components/audio-controller.html">
@@ -30,13 +31,13 @@
     </style>
         <paper-header-panel class="flex" mode="seamed">
           <omaha-navbar id="nav" selected="{{selected}}" class="paper-header"></omaha-navbar>
-          <iron-pages id="app-pages" selected="{{selected}}">
+          <neon-animated-pages class="fit" id="app-pages" selected="{{selected}}">
             <map-controller on-speakerselected="_speakerSelected" class="fit"></map-controller>
             <audio-controller id="controller" class="fit"></audio-controller>
 <!--             <template is="dom-repeat" items="{{controllers}}">
               <audio-controller class="fit" speaker="{{item}}"></audio-controller>
             </template> -->
-          </iron-pages>
+          </neon-animated-pages
         </paper-header-panel>
          <iron-ajax
             id="systemStatusAjax"
