--- a/software/src/omaha/templates/components/map-controller.html
+++ b/software/src/omaha/templates/components/map-controller.html
@@ -9,7 +9,6 @@
 <link rel="import" href="/bower_components/paper-button/paper-button.html">
 <link rel="import" href="/bower_components/paper-styles/paper-styles.html">
 <link rel="import" href="/bower_components/neon-animation/neon-animation.html">
-
 <link rel="import" href="/components/speaker-icon.html">
 
 <dom-module id="map-controller">
@@ -33,11 +32,15 @@
       .container-height {
         height: 100%;
       }
+
+      #map {
+        width: 100%;
+      }
     </style>
     <div class="container-height layout horizontal center">
       <div class="container layout vertical center">
-       <div id="cont" style="position: relative;">
-         <img id="map" on-click="test" src="/css/map.jpg">
+       <div id="cont" on-click="test" style="position: relative;">
+         <img id="map" src="/css/map.png">
          <template is="dom-repeat" items="{{locations}}">
             <speaker-icon on-click="_iconClicked" x="{{item.x}}" y="{{item.y}}" speaker-id="{{item.id}}"></speaker-icon>
          </template>
@@ -80,12 +83,12 @@
         var rect = this.$.map.getBoundingClientRect();
         var parentX = rect.left;
         var eventX = event.pageX;
-        var x = Math.round(Math.min(Math.max(eventX-parentX-15, 0),370));
+        var x = Math.round(Math.min(Math.max(eventX-parentX-15, 0), 370));
         var parentY = rect.top;
         var eventY = event.pageY;
         var y = Math.round(Math.min(Math.max(eventY-parentY-15, 0), 370));
         var div = document.createElement("iron-icon");
-        div.icon = "av:surround-sound";
+        div.icon = "av:volume-up";
         div.className = "block";
         div.style.left = x.toString() + "px";
         div.style.top = y.toString() + "px";
@@ -107,15 +110,18 @@
       ready: function () {
         this.locations = [
           {
-            x: 300,
-            y: 200,
+            x: Math.round(300.0 * (this.$.map.width/this.$.map.naturalWidth)),
+            y: Math.round(200.0 * (this.$.map.height/this.$.map.naturalHeight)),
             id: 107
           },
           {
-            x: 150,
-            y: 100,
+            x: 150 * (1/2),
+            y: 100 * (1/2),
             id: 108
         }];
+      console.log(this.$.map.naturalWidth)
+      console.log(this.locations[0].x)
+      console.log(this.locations[0].y)
       }
     });
   </script>
