Made some map changes; changed the map to what Andy sent us, started messing with the speakers to image scaling. I also removed onclick.

--- a/software/src/omaha/templates/components/map-controller.html
+++ b/software/src/omaha/templates/components/map-controller.html
@@ -39,7 +39,7 @@
     </style>
     <div class="container-height layout horizontal center">
       <div class="container layout vertical center">
-       <div id="cont" on-click="test" style="position: relative;">
+       <div id="cont" style="position: relative;">
          <img id="map" src="/css/map.png">
          <template is="dom-repeat" items="{{locations}}">
             <speaker-icon on-click="_iconClicked" x="{{item.x}}" y="{{item.y}}" speaker-id="{{item.id}}"></speaker-icon>
